Comment Create 기능 구현

--- a/articles/templates/index.html
+++ b/articles/templates/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block body %}
+
+    <a href="{% url 'articles:create' %}">new</a>
+
     {% for article in articles %}
     <h3>{{article.title}}</h3>
     <a href="{% url 'articles:detail' article.id %}">detail</a>
