--- a/articles/templates/detail.html
+++ b/articles/templates/detail.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h3>{{article.title}}</h3>
+    <h3 class="bg-primary">{{article.title}}</h3>
     <p>{{article.content}}</p>
     <p>{{article.created_at}}</p>
     <p>{{article.updated_at}}</p>
